update photo turnTicket